app/ingress-blue.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blue
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app.bjethwan.xyz
    http:
      paths:
      - path: /blue
        backend:
          serviceName: nginx-blue
          servicePort: 80
